--- a/blog-vue/shoka-blog/index.html
+++ b/blog-vue/shoka-blog/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Hello World</title>
-	<meta name="referrer" content="no-referrer">
-	<!-- 改动1：解开注释+升级katex版本+加crossorigin，适配v-md-editor的cdn插件（核心！） -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" crossorigin="anonymous" />
-	<script src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js" crossorigin="anonymous" defer></script>
-</head>
-<body>
-<div id="app"></div>
-	<script type="module" src="/src/main.ts"></script>
-	<canvas class="fireworks" style="position: fixed; top: 0px; left: 0px; pointer-events: none; z-index: 9999999;"></canvas>
-	<!-- 改动2：解开fireworks注释（本地文件放public下即可） -->
-<!--	<script src="/fireworks.min.js"></script>-->
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>博客</title>
+		<meta name="description" content="个人博客，分享技术与生活。" />
+		<meta name="referrer" content="no-referrer" />
+		<!-- 改动1：解开注释+升级katex版本+加crossorigin，适配v-md-editor的cdn插件（核心！） -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"
+			crossorigin="anonymous"
+			defer
+		></script>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script type="module" src="/src/main.ts"></script>
+		<canvas
+			class="fireworks"
+			style="
+				position: fixed;
+				top: 0px;
+				left: 0px;
+				pointer-events: none;
+				z-index: 9999999;
+			"
+		></canvas>
+		<!-- 改动2：解开fireworks注释（本地文件放public下即可） -->
+		<!--	<script src="/fireworks.min.js"></script>-->
+	</body>
 </html>
