--- a/blog-vue/shoka-admin/index.html
+++ b/blog-vue/shoka-admin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="vue3-element-admin的个人博客" />
     <meta name="keywords" content="vite,vue3-element-admin,个人博客" />
